# memory_scanner

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  process_scanner_example.cc  target_process.cc
examples/btree/: CMakeLists.txt  btree.hh  btree_harness.cc
examples/data_structures/: CMakeLists.txt  binary_tree_with_cross_links.cc  cyclic_graph.cc  hybrid.cc  list.cc  skip_list.cc
examples/dijkstra/: CMakeLists.txt  dijkstra.cc  dijkstra.hh  dijkstra_harness.cc
examples/page_rank/: CMakeLists.txt  pagerank.cc  pagerank.hh  pagerank_harness.cc
experiments/: error_analysis.py
include/memory_tools/: attach_guard.hh  cli.hh  command_handler.hh  error_injection.hh  error_injection_strategy.hh  global_state.hh  injection_strategy.hh  memory_region.hh  monitor_controller.hh  monitor_interface.hh  monitor_strategy.hh  pointer_scanner.hh  pointer_scanner_handler.hh  process_base.hh  process_checkpoint.hh  process_manager.hh  process_scanner.hh
src/: attach_guard.cc  cli.cc  command_handler.cc  command_monitoring_strategy.cc  global_state.cc  injector.cc  monitor_controller.cc  monitor_interface.cc  monitoring_strategy.cc  pointer_scanner.cc  pointer_scanner_handler.cc  process_base.cc  process_checkpoint.cc  process_manager.cc  process_monitor.cc  process_scanner.cc
tests/: CMakeLists.txt  pointer_scanner_test.cc
